--- a/Dashboard.html
+++ b/Dashboard.html
@@ -84,7 +84,7 @@
                             <img src="img/IMG_1587.JPG" alt="" width="32" height="32" class="rounded-circle">
                             <strong>محمد صفرپور</strong>
                         </a>
-                        <ul class="dropdown-menu shadow" data-popper-placement = "top-end">
+                        <ul class="dropdown-menu shadow" data-popper-placement="top-end">
                             <li><a class="dropdown-item" href="#">پروژه جدید...</a></li>
                             <li><a class="dropdown-item" href="#">تنظیمات</a></li>
                             <li><a class="dropdown-item" href="#">پروفایل</a></li>
@@ -94,7 +94,101 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-10 p-0"></div>
+            <div class="col-lg-10 p-0">
+                <nav class="navbar navbar-expand-lg border-bottom border-secondary border-opacity-10">
+                    <div class="container-fluid">
+                        <a href="" class="navbar-brand">پیشخوان</a>
+                        <button class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="offcanvas offcanvas-start d-lg-none" id="offcanvasNavbar">
+                            <div class="d-flex flex-column overflow-y-auto shadow p-3 h-100">
+                                <button class="btn-close" data-bs-dismiss="offcanvas"></button>
+                                <a href=""
+                                    class="d-flex align-items-center gap-1 text-decoration-none link-body-emphasis">
+                                    <img src="img/logo.webp" alt="" width="70">
+                                    <span class="fw-bold fs-4">سبزلرن</span>
+                                </a>
+                                <hr>
+                                <ul class="nav nav-pills d-block mb-auto">
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link d-flex gap-2 active">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                                            </svg>
+                                            <span>خانه</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-speedometer2" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4M3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707M2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10m9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5m.754-4.246a.39.39 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.39.39 0 0 0-.029-.518z" />
+                                                <path fill-rule="evenodd"
+                                                    d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A8 8 0 0 1 0 10m8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3" />
+                                            </svg>
+                                            <span>داشبورد</span>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-basket3" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM3.394 15l-1.48-6h-.97l1.525 6.426a.75.75 0 0 0 .729.574h9.606a.75.75 0 0 0 .73-.574L15.056 9h-.972l-1.479 6z" />
+                                            </svg>
+                                            <span>سفارش ها</span>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783" />
+                                            </svg>
+                                            <span>دوره ها</span>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                                            </svg>
+                                            <span>مشتریان</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <hr>
+                                <div class="dropdown">
+                                    <a href="#"
+                                        class=" dropdown-toggle d-flex align-items-center text-decoration-none gap-2 link-body-emphasis"
+                                        data-bs-toggle="dropdown">
+                                        <img src="img/IMG_1587.JPG" alt="" width="32" height="32"
+                                            class="rounded-circle">
+                                        <strong>محمد صفرپور</strong>
+                                    </a>
+                                    <ul class="dropdown-menu shadow" data-popper-placement="top-end">
+                                        <li><a class="dropdown-item" href="#">پروژه جدید...</a></li>
+                                        <li><a class="dropdown-item" href="#">تنظیمات</a></li>
+                                        <li><a class="dropdown-item" href="#">پروفایل</a></li>
+                                        <hr>
+                                        <li><a class="dropdown-item" href="#">خروج</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
