--- a/Dashboard.html
+++ b/Dashboard.html
@@ -15,8 +15,8 @@
             <div class="col-lg-2 d-none d-lg-block p-0 vh-100">
                 <div class="d-flex flex-column shadow p-3 h-100 position-fixed w_inherit">
                     <a href="" class="d-flex align-items-center gap-1 text-decoration-none link-body-emphasis">
-                        <img src="img/logo.webp" alt="" width="70">
-                        <span class="fw-bold fs-4">سبزلرن</span>
+                        <img src="img/IMG_1769.JPG" alt="" width="70" height="40" class="rounded-3">
+                        <span class="fw-bold fs-4">فرانت لرن</span>
                     </a>
                     <hr>
                     <ul class="nav nav-pills d-block mb-auto">
@@ -133,7 +133,6 @@
                                             <span>داشبورد</span>
                                         </a>
                                     </li>
-
                                     <li class="nav-item">
                                         <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -351,10 +350,104 @@
                                                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
                                         </svg>
                                     </a>
-
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="border table-responsive border-secondary border-opacity-10 rounded-3 mt-4">
+                        <div class="p-2 border-bottom border-secondary border-opacity-10">
+                            <span class="fw-bold fs-4">وضعیت</span>
+                        </div>
+                        <table class="table table-borderless">
+                            <thead>
+                                <tr>
+                                    <th class="text-nowrap">#</th>
+                                    <th class="text-nowrap">دوره</th>
+                                    <th class="text-nowrap">مدرس</th>
+                                    <th class="text-nowrap">تصویر</th>
+                                    <th class="text-nowrap">شروع</th>
+                                    <th class="text-nowrap">وضعیت</th>
+                                    <th class="text-nowrap">درصد یادگیری</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td class="text-nowrap">بوت استرپ 5</td>
+                                    <td class="text-nowrap">رضا محمدی</td>
+                                    <td><img src="img/IMG_1587.JPG" alt="" width="32" height="32"
+                                            class="rounded-circle"></td>
+                                    <td class="text-nowrap">10 بهمن</td>
+                                    <td><span class=" text-nowrap badge bg-success rounded-pillّ">گذرانده شده</span>
+                                    </td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-success" style="width: 100%">100%</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td class="text-nowrap">جی کوئری </td>
+                                    <td class="text-nowrap">علی مقدم</td>
+                                    <td><img src="img/IMG_1587.JPG" alt="" width="32" height="32"
+                                            class="rounded-circle"></td>
+                                    <td class="text-nowrap">6 اسفند</td>
+                                    <td><span class=" text-nowrap badge bg-info rounded-pillّ">درحال یادگیری</span></td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-info" style="width: 75%">75%</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td class="text-nowrap">جاوا اسکریپت</td>
+                                    <td class="text-nowrap">ارشام خالقی</td>
+                                    <td><img src="img/IMG_1587.JPG" alt="" width="32" height="32"
+                                            class="rounded-circle"></td>
+                                    <td class="text-nowrap">20 فروردین</td>
+                                    <td><span class=" text-nowrap badge bg-warning rounded-pillّ">در حال یادگیری</span>
+                                    </td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-warning" style="width: 50%">50%</div>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>4</td>
+                                    <td class="text-nowrap">ری اکت</td>
+                                    <td class="text-nowrap">حمید فخاری</td>
+                                    <td><img src="img/IMG_1587.JPG" alt="" width="32" height="32"
+                                            class="rounded-circle"></td>
+                                    <td class="text-nowrap">2 اردیبهشت</td>
+                                    <td><span class="text-nowrap badge bg-danger rounded-pillّ">درحال یادگیری</span>
+                                    </td>
+                                    <td>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-danger" style="width: 25%">25%</div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="d-flex justify-content-center mt-3">
+                        <ul class="pagination">
+                            <li class="page-item disabled">
+                                <span class="page-link">قبلی</span>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item active">
+                                <span class="page-link">2</span>
+                              </li>
+                              <li class="page-item"><a class="page-link" href="#">3</a></li>
+                              <li class="page-item">
+                                <a class="page-link" href="#">بعدی</a>
+                              </li>
+                        </ul>
                     </div>
                 </div>
             </div>
