--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/persian.datepicker.css">
 </head>
 
 <body>
@@ -442,18 +443,65 @@
                             <li class="page-item"><a class="page-link" href="#">1</a></li>
                             <li class="page-item active">
                                 <span class="page-link">2</span>
-                              </li>
-                              <li class="page-item"><a class="page-link" href="#">3</a></li>
-                              <li class="page-item">
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item">
                                 <a class="page-link" href="#">بعدی</a>
-                              </li>
+                            </li>
                         </ul>
+                    </div>
+                    <div class="border border-secondary border-opacity-10 rounded">
+                        <div class="p-2 border-bottom border-secondary border-opacity-10">
+                            <span class="fw-bold fs-4">اطلاعات کاربر</span>
+                        </div>
+                        <form class="row p-3">
+                            <div class="col-sm-12 col-md-6 mt-sm-3 mt-md-0">
+                                <label for="" class="form-label">نام</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col-sm-12 col-md-6 mt-sm-3 mt-md-0">
+                                <label for="" class="form-label">نام حانوادگی</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col-sm-12 col-md-6 mt-3">
+                                <label for="" class="form-label">ایمیل</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col-sm-12 col-md-6 mt-3">
+                                <label for="" class="form-label">شغل</label>
+                                <select class="form-select">
+                                    <option selected>انتخاب کنید</option>
+                                    <option value="1">کارشناس لینوکس</option>
+                                    <option value="2">محصل یا دانشچو</option>
+                                    <option value="3">مدیر IT</option>
+                                    <option value="4">مدیر سرور</option>
+                                    <option value="5">توسعه دهنده فرانت اند</option>
+                                    <option value="6">توسعه دهنده بک اند</option>
+                                    <option value="7">توسعه دهنده برنامه های موبایل</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-12 col-md-6 mt-3">
+                                <label for="" class="form-label">تصویر</label>
+                                <input type="file" class="form-control">
+                            </div>
+                            <div class="col-sm-12 col-md-6 mt-3">
+                                <label for="" class="form-label">تاریخ تولد</label>
+                                <input type="text" class="form-control" id="custom_date_persian">
+                            </div>
+                            <div class="mt-3">
+                                <button class="btn btn-success">آپدیت</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/persian.date.js"></script>
+    <script src="js/persian.datepicker.js"></script>
+    <script src="js/custom-date.js"></script>
 </body>
 
 </html>
