fixe nav active

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,7 +22,7 @@
                     <hr>
                     <ul class="nav nav-pills d-block mb-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 active">
+                            <a href="#" class="nav-link d-flex gap-2 active link-body-emphasis" id="home">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-house" viewBox="0 0 16 16">
                                     <path
@@ -32,7 +32,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="dashboard">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-speedometer2" viewBox="0 0 16 16">
                                     <path
@@ -45,7 +45,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="orders">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-basket3" viewBox="0 0 16 16">
                                     <path
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="curses">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-book" viewBox="0 0 16 16">
                                     <path
@@ -67,7 +67,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="customers">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-person" viewBox="0 0 16 16">
                                     <path
@@ -543,6 +543,7 @@
     <script src="js/persian.datepicker.js"></script>
     <script src="js/custom-date.js"></script>
     <script src="js/dark_light_mode.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
