complete form validation

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,7 +22,7 @@
                     <hr>
                     <ul class="nav nav-pills d-block mb-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 active link-body-emphasis" id="home">
+                            <a href="#" class="nav-link d-flex gap-2 active link-body-emphasis home">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-house" viewBox="0 0 16 16">
                                     <path
@@ -32,7 +32,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="dashboard">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis dashboard">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-speedometer2" viewBox="0 0 16 16">
                                     <path
@@ -45,7 +45,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="orders">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis orders">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-basket3" viewBox="0 0 16 16">
                                     <path
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="curses">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis curses">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-book" viewBox="0 0 16 16">
                                     <path
@@ -67,7 +67,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis" id="customers">
+                            <a href="#" class="nav-link d-flex gap-2 link-body-emphasis customers">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-person" viewBox="0 0 16 16">
                                     <path
@@ -113,7 +113,7 @@
                                 <hr>
                                 <ul class="nav nav-pills d-block mb-auto">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link d-flex gap-2 active">
+                                        <a href="#" class="nav-link d-flex gap-2 active home">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                                                 <path
@@ -123,7 +123,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis dashboard">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-speedometer2" viewBox="0 0 16 16">
                                                 <path
@@ -135,7 +135,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis orders">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-basket3" viewBox="0 0 16 16">
                                                 <path
@@ -146,7 +146,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis curses">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
                                                 <path
@@ -157,7 +157,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis">
+                                        <a href="#" class="nav-link d-flex gap-2 link-body-emphasis customers" >
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                                                 <path
@@ -479,7 +479,7 @@
                             </div>
                             <div class="col-sm-12 col-md-6 mt-3">
                                 <label class="form-label">شغل</label>
-                                <select class="form-select">
+                                <select title="select" class="form-select">
                                     <option selected>انتخاب کنید</option>
                                     <option value="1">کارشناس لینوکس</option>
                                     <option value="2">محصل یا دانشچو</option>
@@ -492,19 +492,19 @@
                             </div>
                             <div class="col-sm-12 col-md-6 mt-3">
                                 <label for="" class="form-label" for="validationFormCheck3">تصویر</label>
-                                <input type="file" class="form-control" id="validationFormCheck3" required>
+                                <input type="file" title="file" class="form-control" id="validationFormCheck3" required>
                                 <div class="invalid-feedback">لطفا یک تصویر انتخاب کنید و آپلود کنید </div>
                                 <div class="valid-feedback">ممنونم که عکسی به این زیبایی انتخاب کردید❤️</div>
                             </div>
                             <div class="col-sm-12 col-md-6 mt-3">
                                 <label for="" class="form-label" for="validationFormCheck4">تاریخ تولد</label>
-                                <input type="text" class="form-control custom_date_persian" id="validationFormCheck4"
+                                <input type="text" title="date-birdth" class="form-control custom_date_persian" id="validationFormCheck4"
                                     required>
                                 <div class="invalid-feedback">لطفا تاریخ تولد خودرا وارد کنید</div>
                                 <div class="valid-feedback">ممنونم که تاریخ تولد خودرا وارد کردید❤️</div>
                             </div>
                             <div class="mt-3">
-                                <button class="btn btn-success">آپدیت</button>
+                                <button class="btn btn-success" type="button">آپدیت</button>
                             </div>
                         </form>
                     </div>
