--- a/Dashboard.html
+++ b/Dashboard.html
@@ -206,7 +206,7 @@
                     <div class="row row-gap-2 mt-4">
                         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                             <div
-                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-info bg-gradient rounded-3 px-3 py-4">
+                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-info bg-gradient rounded-3 px-3 py-4 card_hover">
                                 <div>
                                     <h5 class="fw-bold text-light text-nowrap">پیشرفت کاریر</h5>
                                     <span class="text-light fs-3 text-nowrap">58%</span>
@@ -234,9 +234,9 @@
                                 </div>
                                 <div
                                     class="position-absolute bg-dark p-1 bg-opacity-25 start-0 text-center w-100 bottom-0">
-                                    <a href="" class="text-light text-decoration-none">اطلاعات بیشتر
+                                    <a href="" class="text-light text-decoration-none more_info">اطلاعات بیشتر
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                                            class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                            class="bi bi-arrow-left more_info_icon" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
                                                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
                                         </svg>
@@ -247,7 +247,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                             <div
-                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-danger bg-gradient rounded-3 px-3 py-4">
+                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-danger bg-gradient rounded-3 px-3 py-4 card_hover">
                                 <div>
                                     <h5 class="fw-bold text-light text-nowrap">دوره ها</h5>
                                     <span class="text-light fs-3 text-nowrap">10</span>
@@ -275,9 +275,9 @@
                                 </div>
                                 <div
                                     class="position-absolute bg-dark p-1 bg-opacity-25 start-0 text-center w-100 bottom-0">
-                                    <a href="" class="text-light text-decoration-none">اطلاعات بیشتر
+                                    <a href="" class="text-light text-decoration-none more_info">اطلاعات بیشتر
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                                            class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                            class="bi bi-arrow-left more_info_icon" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
                                                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
                                         </svg>
@@ -288,7 +288,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                             <div
-                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-primary bg-gradient rounded-3 px-3 py-4">
+                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-primary bg-gradient rounded-3 px-3 py-4 card_hover">
                                 <div>
                                     <h5 class="fw-bold text-light text-nowrap">مجموع تیکت ها</h5>
                                     <span class="text-light fs-3 text-nowrap">30</span>
@@ -316,9 +316,9 @@
                                 </div>
                                 <div
                                     class="position-absolute bg-dark p-1 bg-opacity-25 start-0 text-center w-100 bottom-0">
-                                    <a href="" class="text-light text-decoration-none">اطلاعات بیشتر
+                                    <a href="" class="text-light text-decoration-none more_info">اطلاعات بیشتر
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                                            class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                            class="bi bi-arrow-left more_info_icon" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
                                                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
                                         </svg>
@@ -329,7 +329,7 @@
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 col-xl-3">
                             <div
-                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-success bg-gradient rounded-3 px-3 py-4">
+                                class="d-flex position-relative overflow-hidden align-items-center justify-content-between bg-success bg-gradient rounded-3 px-3 py-4 card_hover">
                                 <div>
                                     <h5 class="fw-bold text-light text-nowrap">موجودی حساب</h5>
                                     <span class="text-light fs-3 text-nowrap">0تومان</span>
@@ -357,9 +357,9 @@
                                 </div>
                                 <div
                                     class="position-absolute bg-dark p-1 bg-opacity-25 start-0 text-center w-100 bottom-0">
-                                    <a href="" class="text-light text-decoration-none">اطلاعات بیشتر
+                                    <a href="" class="text-light text-decoration-none more_info">اطلاعات بیشتر
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff"
-                                            class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                            class="bi bi-arrow-left more_info_icon" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd"
                                                 d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
                                         </svg>
